--- a/portifolio.html
+++ b/portifolio.html
@@ -4,11 +4,16 @@
     <title>
         my portfolio
     </title>
+    <style>
+        img{
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <h1>
         A little effort a day make a big achivement
     </h1>
-    <img src="portifolio\cam.jpg">
+    <img src="https://res.cloudinary.com/dghigx8dc/image/upload/v1734021962/cam_pgyual.jpg" width="500" height="500">
 </body>
 </html>
