--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>A little effort a day makes a big achievement</h1>
+    <h1>Aim big low aim is crime</h1>
     <img src="https://res.cloudinary.com/dghigx8dc/image/upload/v1734021962/cam_pgyual.jpg" width="500" height="500">
 </body>
 </html>
